<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Holy Bible And Lyrics</string>
    <string name="title_home">Home</string>
    <string name="title_highlights">Highlights</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_bookmark_highlight">Bookmark &amp; Highlights</string>
    <string name="title_notes">Notes</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_lyrics">Lyrics</string>
    <string name="title_quotes">Quotes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Mobile App Developer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="search">Search</string>
    <string name="book">Book</string>
    <string name="chapter">Chapter</string>
    <string name="verse">Verse</string>
    <string name="feedback">Feedback</string>
    <string name="old_testament">Old Testament</string>
    <string name="new_testament">New Testament</string>
    <string name="old_testament_tn">பழைய ஏற்பாடு</string>
    <string name="new_testament_tn">புதிய ஏற்பாடு</string>
    <string name="old_testament_te">పాత నిబంధన</string>
    <string name="new_testament_te">కొత్త నిబంధన</string>
    <string name="bible">Bible</string>
    <string name="notification_channel_id">default</string>
    <string name="notification">Notification</string>

    <string name="banner_ad_unit_id">ca-app-pub-2552944737773120/5330122927</string>
    <string name="language_change" translatable="false">Language Change</string>
    <string name="share_app" translatable="false">Share APP</string>
    <string name="start_typing">Start typing</string>
    <string name="telugu">Telugu</string>
    <string name="tamil">Tamil</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="select_language">Select Language</string>
    <string name="all">All</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="no_internet">No Internet connection. Make sure that Wi-Fi or mobile data is turned on, then try again.</string>

</resources>
