<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ashok.bible.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/navigation_highlights"
        android:name="com.ashok.bible.ui.highlights.HighlightsFragment"
        android:label="@string/title_highlights"
        tools:layout="@layout/fragment_highlights" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.ashok.bible.ui.favorite.FavoriteFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.ashok.bible.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.ashok.bible.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_setting" />


    <fragment
        android:id="@+id/navigation_quotes"
        android:name="com.ashok.bible.ui.quotes.QuotesFragment"
        android:label="@string/title_quotes"
        tools:layout="@layout/fragment_quotes" />

    <fragment
        android:id="@+id/navigation_lyrics"
        android:name="com.ashok.bible.ui.lyrics.LyricsFragment"
        android:label="@string/title_lyrics"
        tools:layout="@layout/fragment_lyrics" />


</navigation>
