<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <!--<item
        android:id="@+id/navigation_highlights"
        android:icon="@drawable/ic_highlights_24dp"
        android:title="@string/title_highlights" />-->
    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/ic_bookmark_24dp"
        android:title="@string/title_bookmark" />

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_notes_24dp"
        android:title="@string/title_notes" />
    <item
        android:id="@+id/navigation_quotes"
        android:icon="@drawable/icons_quote"
        android:title="@string/title_quotes" />
    <item
        android:id="@+id/navigation_lyrics"
        android:icon="@drawable/lyrics"
        android:title="@string/title_lyrics" />

</menu>
