<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_bookmark_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/navigation_quotes"
            android:icon="@drawable/icons_quote"
            android:title="@string/title_quotes" />
        <item
            android:id="@+id/navigation_lyrics"
            android:icon="@drawable/lyrics"
            android:title="@string/title_lyrics" />
        <item
            android:id="@+id/navigation_language"
            android:icon="@drawable/ic_language"
            android:title="@string/language_change" />
        <item
            android:id="@+id/nav_darkmode_id"
            android:title="Dark Mode"
            android:icon="@drawable/ic_brightness_3_black_24dp"
            app:actionLayout="@layout/nav_drawer_darkmode_switch"
            />
        <item
            android:id="@+id/navigation_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share_app" />
        <item
            android:id="@+id/navigation_feedback"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />
    </group>
</menu>
